crates/ink/tests/ui/contract/fail/storage-conflicting-event.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/storage-conflicting-event.rs:6:11
  |
6 |     #[ink(event)]
  |           ^^^^^
